--- a/calendar.tex
+++ b/calendar.tex
@@ -109,11 +109,11 @@
 	\calendar (mycal) [dates=2020-11-01 to 2020-11-last, xshift=\monthwidth, yshift=-3*\monthwidth];
 	\calendar (mycal) [dates=2020-12-01 to 2020-12-last, xshift=2*\monthwidth, yshift=-3*\monthwidth];
  %use contents from "csv" file
-    \drawfilerow{mycal}{1}{red}; %cardio
-    \drawfilerow{mycal}{2}{blue}; %strength
-    \drawfilerow{mycal}{3}{green}; %rope jumping
-    \drawfilerow{mycal}{4}{orange}; %bouldering
-    \drawfilerow{mycal}{5}{brown}; %other
+    \drawfilerow{mycal}{1}{red}; %exercise #1
+    \drawfilerow{mycal}{2}{blue}; %exercise #2
+    \drawfilerow{mycal}{3}{green}; %exercise #3
+    \drawfilerow{mycal}{4}{orange}; %exercise #4
+    \drawfilerow{mycal}{5}{brown}; %exercise #5
 \end{tikzpicture}
 
 
