--- a/calendar.tex
+++ b/calendar.tex
@@ -1,3 +1,5 @@
+%As of now most of the code was provided by AlanXiang from TeX stackexchange, thank you!
+
 \documentclass{article}
 \usepackage[a4paper, total={8.5in, 11in}]{geometry}
 \usepackage{csvsimple}
